2012-12-16

	* Add logic for NEED_PAX_DECLS when gelf.h is present but lacks them
	As of >=glibc-2.16 gentoo no longer carries PAX_DECLS in elf.h
	* scripts/paxmodule.c: do not use '-' when setting null XATTR PAX flags
	* scripts/paxmodule.c: adopt the update_flags() logic of paxctl-ng.c
	* scripts/paxmodule.c: adopt the parse_cmd_args() logic of paxctl-ng.c
	* scripts/revdep-pax: clean up flag exporter/importer logic
	* added tests/paxmodule: test python pax module
	* added up tests/pxtpax: do marked flags <-> running process testing
	* added tests/revdeppaxtest: test revdep-pax
	* Tests now give proper return values and are not verbose by default

2012-11-10

	* fix a typo in revdep-pax script and documentation
	* make both PT_PAX and xattr PAX optionally enabled/disabled in
	configure.ac and propagated to src/paxctl-ng.c and script/paxmodule.c
	* add -L -l which limits markings to only PT_PAX or XT_PAX when
	both are possible
	* add -d which deletes the XT_PAX xattr field
	* silently ignore non-applicable command line flags so there is
	more flexibility in scripting
	* add proper exit code handling

2012-07-29

	* remove unnecessary check for yasm in configure.ac
	* make tests/gnustack machine independant by generating
	native assembly using gcc

2012-07-27

	* switch from yasm to gcc for assembler for arches other than
	x86 and amd64
	* opening an ELF_C_RDWR does not work for either libelf or
	elfutils, so revert to ELF_C_RDWR_MMAP.  This does, however,
	break linking against libelf

2012-07-24

	* scripts/{revdep-pax,paxmodule.c,pypaxctl}: python2/3 compat
	* src/{fix-gnustack.c,paxctl-ng.c}, scripts/paxmodule.c:
	switch from ELF_C_RDWR_MMAP to ELF_C_RDWR to link again libelf
	for uclibc systems
	* scripts/revdep-pax: remove bare exception handling, catch only
	exceptions which are well understood, eg pax.error
	* scripts/revdep-pax: switch from subprocess.check_output to
	subprocess.Popen for better behavior