@@ -1,3 +1,8 @@
+2012-12-21
+
+	* Change the name XT_PAX to XATTR_PAX to follow upstream everywhere
+	except in this document.
+
 2012-12-16
 
 	* Add logic for NEED_PAX_DECLS when gelf.h is present but lacks them
